--- a/package.json
+++ b/package.json
@@ -27,9 +27,13 @@
   "devDependencies": {
     "@commitlint/cli": "8.1.0",
     "@commitlint/config-conventional": "8.1.0",
+    "@types/body-parser": "^1.17.1",
+    "@types/express": "^4.17.1",
     "@types/jasmine": "3.4.0",
+    "@types/minimist": "^1.2.0",
     "@types/node": "12.7.5",
     "@types/puppeteer": "1.19.1",
+    "@types/tmp": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "2.2.0",
     "@typescript-eslint/parser": "2.2.0",
     "autoprefixer": "9.6.1",
@@ -40,6 +44,7 @@
     "eslint": "6.3.0",
     "eslint-config-prettier": "6.3.0",
     "eslint-plugin-plantain": "0.1.2",
+    "file-uploader-vue-component": "^7.6.0",
     "file2variable-cli": "1.9.0",
     "github-fork-ribbon-css": "0.2.3",
     "jasmine": "3.4.0",
@@ -69,5 +74,12 @@
   },
   "typeCoverage": {
     "atLeast": 100
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "minimist": "^1.2.0",
+    "tesseract.js": "^2.0.0-alpha.15",
+    "tmp": "^0.1.0"
   }
 }
