--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "@commitlint/config-conventional": "8.2.0",
     "@types/body-parser": "^1.17.1",
     "@types/express": "^4.17.1",
-    "@types/jasmine": "3.4.0",
+    "@types/jasmine": "3.4.1",
     "@types/minimist": "^1.2.0",
-    "@types/node": "12.7.5",
-    "@types/puppeteer": "1.19.1",
+    "@types/node": "12.7.8",
+    "@types/puppeteer": "1.20.0",
     "@types/tmp": "^0.1.0",
-    "@typescript-eslint/eslint-plugin": "2.3.0",
-    "@typescript-eslint/parser": "2.3.0",
+    "@typescript-eslint/eslint-plugin": "2.3.1",
+    "@typescript-eslint/parser": "2.3.1",
     "autoprefixer": "9.6.1",
     "clean-css-cli": "4.3.0",
     "clean-release": "2.7.0",
@@ -47,7 +47,7 @@
     "file-uploader-vue-component": "^7.6.0",
     "file2variable-cli": "1.9.0",
     "github-fork-ribbon-css": "0.2.3",
-    "jasmine": "3.4.0",
+    "jasmine": "3.5.0",
     "karma": "4.3.0",
     "karma-chrome-launcher": "3.1.0",
     "karma-firefox-launcher": "1.2.0",
@@ -62,13 +62,13 @@
     "rimraf": "3.0.0",
     "stylelint": "11.0.0",
     "stylelint-config-standard": "19.0.0",
-    "ts-loader": "6.1.1",
+    "ts-loader": "6.1.2",
     "type-coverage": "2.3.0",
     "typescript": "3.6.3",
     "vue": "2.6.10",
     "vue-class-component": "7.1.0",
     "watch-then-execute": "1.1.1",
-    "webpack": "4.40.2",
+    "webpack": "4.41.0",
     "webpack-cli": "3.3.9"
   },
   "typeCoverage": {
@@ -78,7 +78,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "minimist": "^1.2.0",
-    "tesseract.js": "^2.0.0-alpha.16",
+    "tesseract.js": "2.0.0-alpha.16",
     "tmp": "^0.1.0",
     "tslib": "^1.10.0"
   }
