--- a/package.json
+++ b/package.json
@@ -29,19 +29,19 @@
     "@commitlint/config-conventional": "8.2.0",
     "@types/body-parser": "^1.17.1",
     "@types/express": "^4.17.1",
-    "@types/jasmine": "3.4.1",
+    "@types/jasmine": "3.4.2",
     "@types/minimist": "^1.2.0",
-    "@types/node": "12.7.8",
-    "@types/puppeteer": "1.20.0",
+    "@types/node": "12.7.11",
+    "@types/puppeteer": "1.20.1",
     "@types/tmp": "^0.1.0",
-    "@typescript-eslint/eslint-plugin": "2.3.1",
-    "@typescript-eslint/parser": "2.3.1",
+    "@typescript-eslint/eslint-plugin": "2.3.2",
+    "@typescript-eslint/parser": "2.3.2",
     "autoprefixer": "9.6.1",
     "clean-css-cli": "4.3.0",
     "clean-release": "2.7.0",
     "clean-scripts": "1.12.1",
-    "cross-env": "6.0.0",
-    "eslint": "6.4.0",
+    "cross-env": "6.0.3",
+    "eslint": "6.5.1",
     "eslint-config-prettier": "6.3.0",
     "eslint-plugin-plantain": "0.1.2",
     "file-uploader-vue-component": "^7.6.0",
@@ -62,7 +62,7 @@
     "rimraf": "3.0.0",
     "stylelint": "11.0.0",
     "stylelint-config-standard": "19.0.0",
-    "ts-loader": "6.1.2",
+    "ts-loader": "6.2.0",
     "type-coverage": "2.3.0",
     "typescript": "3.6.3",
     "vue": "2.6.10",
@@ -78,7 +78,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "minimist": "^1.2.0",
-    "tesseract.js": "2.0.0-alpha.16",
+    "tesseract.js": "2.0.0-beta.1",
     "tmp": "^0.1.0",
     "tslib": "^1.10.0"
   }
