--- a/package.json
+++ b/package.json
@@ -28,21 +28,21 @@
     "@commitlint/cli": "8.2.0",
     "@commitlint/config-conventional": "8.2.0",
     "@types/body-parser": "^1.17.1",
-    "@types/express": "^4.17.1",
-    "@types/jasmine": "3.4.4",
+    "@types/express": "4.17.2",
+    "@types/jasmine": "3.4.5",
     "@types/minimist": "^1.2.0",
-    "@types/node": "12.11.7",
+    "@types/node": "12.12.5",
     "@types/puppeteer": "1.20.2",
     "@types/tmp": "^0.1.0",
-    "@typescript-eslint/eslint-plugin": "2.5.0",
-    "@typescript-eslint/parser": "2.5.0",
-    "autoprefixer": "9.7.0",
+    "@typescript-eslint/eslint-plugin": "2.6.0",
+    "@typescript-eslint/parser": "2.6.0",
+    "autoprefixer": "9.7.1",
     "clean-css-cli": "4.3.0",
     "clean-release": "2.7.0",
     "clean-scripts": "1.12.1",
     "cross-env": "6.0.3",
     "eslint": "6.6.0",
-    "eslint-config-prettier": "6.4.0",
+    "eslint-config-prettier": "6.5.0",
     "eslint-plugin-plantain": "0.1.2",
     "file-uploader-vue-component": "^7.6.0",
     "file2variable-cli": "1.9.0",
@@ -69,7 +69,7 @@
     "vue-class-component": "7.1.0",
     "watch-then-execute": "1.1.1",
     "webpack": "4.41.2",
-    "webpack-cli": "3.3.9"
+    "webpack-cli": "3.3.10"
   },
   "typeCoverage": {
     "atLeast": 100
@@ -78,7 +78,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "minimist": "^1.2.0",
-    "tesseract.js": "2.0.0-beta.1",
+    "tesseract.js": "2.0.0-beta.2",
     "tmp": "^0.1.0",
     "tslib": "^1.10.0"
   }
