--- a/package.json
+++ b/package.json
@@ -31,17 +31,17 @@
     "@types/express": "4.17.2",
     "@types/jasmine": "3.5.0",
     "@types/minimist": "^1.2.0",
-    "@types/node": "12.12.14",
+    "@types/node": "12.12.21",
     "@types/puppeteer": "2.0.0",
     "@types/tmp": "^0.1.0",
-    "@typescript-eslint/eslint-plugin": "2.10.0",
-    "@typescript-eslint/parser": "2.10.0",
+    "@typescript-eslint/eslint-plugin": "2.12.0",
+    "@typescript-eslint/parser": "2.12.0",
     "autoprefixer": "9.7.3",
     "clean-css-cli": "4.3.0",
     "clean-release": "2.7.0",
     "clean-scripts": "1.12.1",
     "cross-env": "6.0.3",
-    "eslint": "6.7.2",
+    "eslint": "6.8.0",
     "eslint-config-prettier": "6.7.0",
     "eslint-plugin-plantain": "0.1.2",
     "file-uploader-vue-component": "^7.6.0",
@@ -54,7 +54,7 @@
     "karma-jasmine": "2.0.1",
     "karma-webpack": "4.0.2",
     "less": "3.10.3",
-    "markdownlint-cli": "0.19.0",
+    "markdownlint-cli": "0.20.0",
     "no-unused-export": "1.10.0",
     "postcss-cli": "6.1.3",
     "puppeteer": "2.0.0",
@@ -64,11 +64,11 @@
     "stylelint-config-standard": "19.0.0",
     "ts-loader": "6.2.1",
     "type-coverage": "2.3.1",
-    "typescript": "3.7.3",
-    "vue": "2.6.10",
+    "typescript": "3.7.4",
+    "vue": "2.6.11",
     "vue-class-component": "7.1.0",
     "watch-then-execute": "1.1.1",
-    "webpack": "4.41.2",
+    "webpack": "4.41.4",
     "webpack-cli": "3.3.10"
   },
   "typeCoverage": {
@@ -78,7 +78,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "minimist": "^1.2.0",
-    "tesseract.js": "2.0.0-beta.2",
+    "tesseract.js": "2.0.0",
     "tmp": "^0.1.0",
     "tslib": "^1.10.0"
   }
