--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "@commitlint/config-conventional": "8.3.4",
     "@types/body-parser": "1.19.0",
     "@types/express": "4.17.3",
-    "@types/jasmine": "3.5.8",
+    "@types/jasmine": "3.5.9",
     "@types/minimist": "^1.2.0",
-    "@types/node": "13.9.0",
+    "@types/node": "13.9.1",
     "@types/puppeteer": "2.0.1",
     "@types/tmp": "^0.1.0",
-    "@typescript-eslint/eslint-plugin": "2.22.0",
-    "@typescript-eslint/parser": "2.22.0",
+    "@typescript-eslint/eslint-plugin": "2.23.0",
+    "@typescript-eslint/parser": "2.23.0",
     "autoprefixer": "9.7.4",
     "clean-css-cli": "4.3.0",
     "clean-release": "2.7.1",
@@ -60,10 +60,10 @@
     "puppeteer": "2.1.1",
     "rev-static": "3.4.3",
     "rimraf": "3.0.2",
-    "stylelint": "13.2.0",
+    "stylelint": "13.2.1",
     "stylelint-config-standard": "20.0.0",
     "ts-loader": "6.2.1",
-    "type-coverage": "2.4.0",
+    "type-coverage": "2.4.1",
     "typescript": "3.8.3",
     "vue": "2.6.11",
     "vue-class-component": "7.2.3",
@@ -77,7 +77,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "minimist": "^1.2.0",
+    "minimist": "1.2.5",
     "tesseract.js": "2.0.2",
     "tmp": "^0.1.0",
     "tslib": "1.11.1"
