--- a/package.json
+++ b/package.json
@@ -31,43 +31,43 @@
     "@types/express": "4.17.6",
     "@types/jasmine": "3.5.10",
     "@types/minimist": "^1.2.0",
-    "@types/node": "13.13.2",
+    "@types/node": "13.13.4",
     "@types/puppeteer": "2.0.1",
-    "@types/tmp": "^0.1.0",
-    "@typescript-eslint/eslint-plugin": "2.29.0",
-    "@typescript-eslint/parser": "2.29.0",
+    "@types/tmp": "0.2.0",
+    "@typescript-eslint/eslint-plugin": "2.30.0",
+    "@typescript-eslint/parser": "2.30.0",
     "autoprefixer": "9.7.6",
     "clean-css-cli": "4.3.0",
-    "clean-release": "2.7.4",
-    "clean-scripts": "1.12.2",
+    "clean-release": "2.7.6",
+    "clean-scripts": "1.12.3",
     "cross-env": "7.0.2",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-plantain": "0.1.2",
     "file-uploader-vue-component": "7.6.1",
-    "file2variable-cli": "1.9.1",
+    "file2variable-cli": "1.9.2",
     "github-fork-ribbon-css": "0.2.3",
     "jasmine": "3.5.0",
-    "karma": "5.0.2",
+    "karma": "5.0.4",
     "karma-chrome-launcher": "3.1.0",
     "karma-firefox-launcher": "1.3.0",
     "karma-jasmine": "3.1.1",
     "karma-webpack": "4.0.2",
     "less": "3.11.1",
     "markdownlint-cli": "0.22.0",
-    "no-unused-export": "1.10.2",
-    "postcss-cli": "7.1.0",
-    "puppeteer": "3.0.1",
-    "rev-static": "3.4.4",
+    "no-unused-export": "1.10.3",
+    "postcss-cli": "7.1.1",
+    "puppeteer": "3.0.2",
+    "rev-static": "3.4.5",
     "rimraf": "3.0.2",
     "stylelint": "13.3.3",
     "stylelint-config-standard": "20.0.0",
-    "ts-loader": "7.0.1",
-    "type-coverage": "2.4.2",
+    "ts-loader": "7.0.2",
+    "type-coverage": "2.4.3",
     "typescript": "3.8.3",
     "vue": "2.6.11",
     "vue-class-component": "7.2.3",
-    "watch-then-execute": "1.1.2",
+    "watch-then-execute": "1.1.3",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.11"
   },
@@ -79,7 +79,7 @@
     "express": "^4.17.1",
     "minimist": "1.2.5",
     "tesseract.js": "2.1.1",
-    "tmp": "^0.1.0",
+    "tmp": "0.2.1",
     "tslib": "1.11.1"
   }
 }
