--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "lint": "clean-scripts lint",
     "test": "clean-scripts test",
     "fix": "clean-scripts fix",
-    "watch": "cross-env NODE_ENV=development clean-scripts watch",
-    "screenshot": "clean-scripts screenshot",
-    "prerender": "clean-scripts prerender"
+    "watch": "cross-env NODE_ENV=development clean-scripts watch"
   },
   "repository": {
     "type": "git",
@@ -29,11 +27,10 @@
     "@commitlint/config-conventional": "8.3.4",
     "@types/body-parser": "1.19.0",
     "@types/express": "4.17.6",
-    "@types/jasmine": "3.5.10",
     "@types/minimist": "^1.2.0",
     "@types/node": "14.0.5",
-    "@types/puppeteer": "3.0.0",
     "@types/tmp": "0.2.0",
+    "@types/webpack": "4.41.16",
     "@typescript-eslint/eslint-plugin": "3.0.2",
     "@typescript-eslint/parser": "3.0.2",
     "autoprefixer": "9.8.0",
@@ -47,22 +44,16 @@
     "file-uploader-vue-component": "7.6.1",
     "file2variable-cli": "1.10.1",
     "github-fork-ribbon-css": "0.2.3",
-    "jasmine": "3.5.0",
-    "karma": "5.0.9",
-    "karma-chrome-launcher": "3.1.0",
-    "karma-firefox-launcher": "1.3.0",
-    "karma-jasmine": "3.3.1",
-    "karma-webpack": "4.0.2",
     "less": "3.11.1",
     "markdownlint-cli": "0.23.1",
     "no-unused-export": "1.10.3",
     "postcss-cli": "7.1.1",
-    "puppeteer": "3.2.0",
     "rev-static": "3.5.1",
     "rimraf": "3.0.2",
     "stylelint": "13.5.0",
     "stylelint-config-standard": "20.0.0",
     "ts-loader": "7.0.5",
+    "ts-node": "8.10.2",
     "type-coverage": "2.7.0",
     "typescript": "3.9.3",
     "vue": "2.6.11",
