chore: reuse tsconfig.json

--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "stylelint-config-standard": "20.0.0",
     "ts-loader": "7.0.5",
     "ts-node": "8.10.2",
-    "type-coverage": "2.8.2",
+    "tsconfig-plantain": "0.0.1",
+    "type-coverage": "2.8.4",
     "typescript": "3.9.5",
     "vue": "2.6.11",
     "vue-class-component": "7.2.3",
