--- a/package.json
+++ b/package.json
@@ -26,26 +26,27 @@
     "@types/body-parser": "1.19.0",
     "@types/express": "4.17.8",
     "@types/minimist": "^1.2.0",
-    "@types/node": "14.11.2",
+    "@types/node": "14.11.8",
     "@types/tmp": "0.2.0",
     "@types/webpack": "4.41.22",
-    "@typescript-eslint/eslint-plugin": "4.2.0",
-    "@typescript-eslint/parser": "4.2.0",
-    "autoprefixer": "9.8.6",
+    "@typescript-eslint/eslint-plugin": "4.4.0",
+    "@typescript-eslint/parser": "4.4.0",
+    "autoprefixer": "10.0.1",
     "clean-css-cli": "4.3.0",
-    "clean-release": "2.14.0",
+    "clean-release": "2.15.2",
     "clean-scripts": "1.18.7",
     "cross-env": "7.0.2",
-    "eslint": "7.8.1",
+    "eslint": "7.11.0",
     "eslint-config-prettier": "6.12.0",
     "eslint-plugin-plantain": "1.1.0",
-    "file-uploader-vue-component": "7.6.1",
-    "file2variable-cli": "1.13.2",
+    "file-uploader-vue-component": "8.0.3",
+    "file2variable-cli": "1.13.3",
     "github-fork-ribbon-css": "0.2.3",
     "less": "3.12.2",
-    "markdownlint-cli": "0.23.2",
-    "no-unused-export": "1.12.2",
-    "postcss-cli": "8.0.0",
+    "markdownlint-cli": "0.24.0",
+    "no-unused-export": "1.13.0",
+    "postcss": "8.1.1",
+    "postcss-cli": "8.1.0",
     "rev-static": "3.6.0",
     "rimraf": "3.0.2",
     "stylelint": "13.7.2",
@@ -53,12 +54,11 @@
     "ts-loader": "8.0.4",
     "ts-node": "9.0.0",
     "tsconfig-plantain": "0.0.1",
-    "type-coverage": "2.11.0",
-    "typescript": "4.0.2",
-    "vue": "2.6.12",
-    "vue-class-component": "7.2.5",
+    "type-coverage": "2.13.3",
+    "typescript": "4.0.3",
+    "vue": "3.0.0",
     "watch-then-execute": "1.2.0",
-    "webpack": "4.44.1",
+    "webpack": "4.44.2",
     "webpack-cli": "3.3.12"
   },
   "typeCoverage": {
@@ -70,6 +70,6 @@
     "minimist": "1.2.5",
     "tesseract.js": "2.1.2",
     "tmp": "0.2.1",
-    "tslib": "2.0.1"
+    "tslib": "2.0.2"
   }
 }
