--- a/package.json
+++ b/package.json
@@ -24,34 +24,34 @@
   "homepage": "https://github.com/plantain-00/ocr-tool#readme",
   "devDependencies": {
     "@types/body-parser": "1.19.0",
-    "@types/express": "4.17.8",
-    "@types/minimist": "^1.2.0",
-    "@types/node": "14.14.6",
+    "@types/express": "4.17.9",
+    "@types/minimist": "1.2.1",
+    "@types/node": "14.14.7",
     "@types/tmp": "0.2.0",
-    "@types/webpack": "4.41.24",
-    "@typescript-eslint/eslint-plugin": "4.6.1",
-    "@typescript-eslint/parser": "4.6.1",
-    "autoprefixer": "10.0.1",
+    "@types/webpack": "4.41.25",
+    "@typescript-eslint/eslint-plugin": "4.7.0",
+    "@typescript-eslint/parser": "4.7.0",
+    "autoprefixer": "10.0.2",
     "clean-css-cli": "4.3.0",
     "clean-release": "2.15.2",
     "clean-scripts": "1.18.7",
     "cross-env": "7.0.2",
-    "eslint": "7.12.1",
+    "eslint": "7.13.0",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-plantain": "1.1.0",
-    "file-uploader-vue-component": "8.0.3",
+    "file-uploader-vue-component": "8.1.0",
     "file2variable-cli": "2.0.0",
     "github-fork-ribbon-css": "0.2.3",
     "less": "3.12.2",
     "markdownlint-cli": "0.24.0",
     "no-unused-export": "1.14.0",
-    "postcss": "8.1.6",
+    "postcss": "8.1.7",
     "postcss-cli": "8.2.0",
     "rev-static": "3.6.0",
     "rimraf": "3.0.2",
     "stylelint": "13.7.2",
     "stylelint-config-standard": "20.0.0",
-    "ts-loader": "8.0.9",
+    "ts-loader": "8.0.11",
     "ts-node": "9.0.0",
     "tsconfig-plantain": "0.0.1",
     "type-coverage": "2.14.2",
