--- a/package.json
+++ b/package.json
@@ -26,17 +26,17 @@
     "@types/body-parser": "1.19.0",
     "@types/express": "4.17.11",
     "@types/minimist": "1.2.1",
-    "@types/node": "15.0.1",
+    "@types/node": "15.0.2",
     "@types/tmp": "0.2.0",
     "@types/webpack": "5.28.0",
-    "@typescript-eslint/eslint-plugin": "4.22.0",
-    "@typescript-eslint/parser": "4.22.0",
+    "@typescript-eslint/eslint-plugin": "4.22.1",
+    "@typescript-eslint/parser": "4.22.1",
     "autoprefixer": "10.2.5",
     "clean-css-cli": "5.3.0",
     "clean-release": "2.15.2",
     "clean-scripts": "1.20.1",
     "cross-env": "7.0.3",
-    "eslint": "7.25.0",
+    "eslint": "7.26.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-plantain": "1.1.0",
     "file-uploader-vue-component": "8.1.0",
@@ -45,21 +45,21 @@
     "less": "4.0.0",
     "markdownlint-cli": "0.27.1",
     "no-unused-export": "1.14.1",
-    "postcss": "8.2.13",
+    "postcss": "8.2.14",
     "postcss-cli": "8.3.1",
     "rev-static": "3.6.0",
     "rimraf": "3.0.2",
-    "stylelint": "13.13.0",
+    "stylelint": "13.13.1",
     "stylelint-config-standard": "22.0.0",
-    "ts-loader": "9.1.1",
+    "ts-loader": "9.1.2",
     "ts-node": "9.1.1",
     "tsconfig-plantain": "0.0.1",
     "type-coverage": "2.17.5",
     "typescript": "4.2.4",
-    "vue": "3.0.11",
+    "vue": "3.1.0-beta.2",
     "watch-then-execute": "1.2.0",
     "webpack": "5.36.2",
-    "webpack-cli": "4.6.0"
+    "webpack-cli": "4.7.0"
   },
   "typeCoverage": {
     "atLeast": 100
