--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "@types/body-parser": "1.19.1",
     "@types/express": "4.17.13",
     "@types/minimist": "1.2.2",
-    "@types/node": "16.4.13",
+    "@types/node": "16.7.0",
     "@types/tmp": "0.2.1",
     "@types/webpack": "5.28.0",
-    "@typescript-eslint/eslint-plugin": "4.29.0",
-    "@typescript-eslint/parser": "4.29.0",
+    "@typescript-eslint/eslint-plugin": "4.29.2",
+    "@typescript-eslint/parser": "4.29.2",
     "autoprefixer": "10.3.1",
     "clean-css-cli": "5.3.3",
     "clean-release": "2.15.2",
@@ -52,14 +52,14 @@
     "stylelint": "13.13.1",
     "stylelint-config-standard": "22.0.0",
     "ts-loader": "9.2.5",
-    "ts-node": "10.1.0",
+    "ts-node": "10.2.1",
     "tsconfig-plantain": "0.0.1",
     "type-coverage": "2.18.0",
     "typescript": "4.3.5",
-    "vue": "3.2.0-beta.7",
+    "vue": "3.2.4",
     "watch-then-execute": "1.2.0",
-    "webpack": "5.49.0",
-    "webpack-cli": "4.7.2"
+    "webpack": "5.51.1",
+    "webpack-cli": "4.8.0"
   },
   "typeCoverage": {
     "atLeast": 100
@@ -70,6 +70,6 @@
     "minimist": "1.2.5",
     "tesseract.js": "2.1.5",
     "tmp": "0.2.1",
-    "tslib": "2.3.0"
+    "tslib": "2.3.1"
   }
 }
